SPREAD-phy version 1.0.5 release candidate
------------------------------------------------

* Progress bar for tree slicer.
* Automated jar detection.
* Column for posterior probabilities value included in the terminal output for BF calculation.
* Some changes to error handling.

April 21, 2012: SPREAD-phy version 1.0.4 released
------------------------------------------------

* Name change: prepended 'phy' for phylogeny to the software name to conform with Debian naming convention.
* SPREAD-phy now has it's own build system
* Removed ColorPicker dependency by combining the original code. This code (in the colorpicker package) is released under 
  Modified BSD license.
* Row numbers in location coordinates editor  
* Fixed bug in Bayes factor values sort function (introduced in v1.0.3)

February 4, 2012: SPREAD version 1.0.3 released
-----------------------------------------------

* The results of Bayes Factor test are now presented in ascending order, both in the Terminal window and in the KML output.
* The weights used in Time Slicer template are now printed to the Terminal window.
* The tool panes size can be adjusted for viewing the inner Spread maps on smaller screens. 
* Made several other minor changes.



