@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Spread-phy</name>
+	<name>Spread</name>
 	<comment></comment>
 	<projects>
 	</projects>
