@@ -1,4 +1,4 @@
-h1. SPREAD-phy
+h1. SPREAD
 
 *Spatial Phylogenetic Reconstruction of Evolutionary Dynamics*
                 Version 1.0.5rc, 2012 
@@ -18,16 +18,16 @@ h1. LICENSE
  
 h1. PURPOSE
                             
-SPREAD-phy is a Java program supporting processing and visualizations of BEAST's phylogeographic models ("BEAST software":http://beast.bio.ed.ac.uk/Main_Page). 
+SPREAD is a Java program supporting processing and visualizations of BEAST's phylogeographic models ("BEAST software":http://beast.bio.ed.ac.uk/Main_Page). 
 
 Contains visualisations (templates), wrapped in a user friendly interface. Supported visualisations include embedded Processing applets and KML output for viewing in "Google Earth":http://www.google.com/earth or any other virtual globe software capable of reading the format.
 
-A tutorial on using SPREAD-phy is availiable "here":http://www.kuleuven.be/aidslab/phylogeography/tutorial/spread_tutorial.html
+A tutorial on using SPREAD is availiable "here":http://www.kuleuven.be/aidslab/phylogeography/tutorial/spread_tutorial.html
 
 h1. SUPPORT & LINKS
 
-SPREAD-phy: www.phylogeography.org/SPREAD
-Processing libraries: http://processing.org/ 
+SPREAD: www.phylogeography.org/SPREAD
+PROCESSING libraries: http://processing.org/ 
 
 Suggestions or bug reports:
 
@@ -43,11 +43,6 @@ Depends on the following libraries:
 * colt.jar
 * quaqua.jar (libquaqua64.jnilib, libquaqua.jnilib)
 
-Before exporting to a runnable jar change line 14 in templates.MapBackground.java:
-boolean fromJar = false 
-        to 
-boolean fromJar = true 
-
 h1. CONTRIBUTING
 
 You're interested in contributing to SPREAD? *THAT'S AWESOME!* Here are the basic steps:
@@ -60,7 +55,9 @@ You're interested in contributing to SPREAD? *THAT'S AWESOME!* Here are the basi
 
 h1. TODO
 
-* Include a column for indicator value in the terminal output
+* Tests for kml templates
+* Compile Windows targeted version
+* Animate spinning widgets
 * Less dependencies:
  - add kmlframework to sources (if licenses compatible) 
 * Improve custom slice heights
