@@ -227,16 +227,16 @@ public class SpreadApp {
 		public void actionPerformed(ActionEvent ev) {
 
 			String helpText = "\n"
-					+ "\t SPREAD-Phy \n"
+					+ "\t SPREAD \n"
 					+ "Spatial Phylogenetic Reconstruction of Evolutionary Dynamics \n"
 					+ " \t Version " + VERSION + ", " + DATE_STRING + "\n"
 					+ "Filip Bielejec, Andrew Rambaut, Marc A. Suchard & Philippe Lemey \n"
 					+ "\n"
-					+ "SPREAD-phy: www.phylogeography.org/SPREAD \n"
+					+ "SPREAD: www.phylogeography.org/SPREAD \n"
 					+ "BEAST software: http://beast.bio.ed.ac.uk/Main_Page \n"
 					+ "PROCESSING libraries: http://processing.org/ \n"
 					+ "\n"
-					+ "Citing SPREAD-phy: \n"
+					+ "Citing SPREAD: \n"
 					+ "Bielejec F., Rambaut A., Suchard M.A & Lemey P. SPREAD: Spatial Phylogenetic Reconstruction of Evolutionary Dynamics. Bioinformatics, 2011. doi:10.1093 \n"
 //					+ "\n"
 					+ "BibTeX entry: \n"
